<resources>
    <string name="app_name">TTS</string>
    <string name="CHOOSE_PRE_INSTALLED_MODEL_KEY">CHOOSE_PRE_INSTALLED_MODEL_KEY</string>
    <string name="ENABLE_CUSTOM_SETTINGS_KEY">ENABLE_CUSTOM_SETTINGS_KEY</string>
    <string name="MODEL_PATH_KEY">MODEL_PATH_KEY</string>
    <string name="CPU_THREAD_NUM_KEY">CPU_THREAD_NUM_KEY</string>
    <string name="CPU_POWER_MODE_KEY">CPU_POWER_MODE_KEY</string>
    <string name="MODEL_PATH_DEFAULT">models/cpu</string>
    <string name="CPU_THREAD_NUM_DEFAULT">1</string>
    <string name="CPU_POWER_MODE_DEFAULT">LITE_POWER_HIGH</string>
</resources>

